2009-05-07  Sebastien Pouliot  <sebastien@ximian.com>

	* UniqueId.cs: Fix attributes for v3.5 (and later 2.0 SP) and remove
	them (in particular [SecurityTreatAsSafe]) from the NET_2_1 build.

2009-04-27  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlBinaryDictionaryReader.cs : several fixes;
	  - Name property was always empty.
	  - Value property was always empty for attributes.
	  - TextIndex node type was not supported.
	  - node reset at Read() was incomplete.
	  - attribute Prefix for single character had wrong value.
	  - namespace nodes did not appear as attribute nodes.
	  - attribute value node must be always single. Another text node
	    means a text child of the element, not the following attr value.
	  tests will go in sys.servicemodel.

2009-04-15  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlMtomDictionaryReader.cs : new.
	* XmlDictionaryReader.cs : implemented CreateMtomReader().

2009-04-02  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlMtomDictionaryWriter.cs : new.
	* XmlDictionaryWriter.cs : implement CreateMtomWriter().

2009-04-01  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlDictionaryReader.cs : add ReadStartElement() overload.

2009-04-01  Atsushi Enomoto  <atsushi@ximian.com>

	* UniqueId.cs : add missing security attributes.
	* XmlDictionaryReader.cs : cleanup extra TODOs.
	* XmlBinaryDictionaryReader.cs : iplement IsArray.

2009-03-31  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlBinaryDictionaryReader.cs, XmlDictionaryWriter.cs :
	  a couple of fixes to reflect correct values for node properties
	  on each read step.

2009-03-31  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlBinaryDictionaryReader.cs, XmlBinaryFormat.cs :
	  support array operation (0x03) on reader too.

2009-03-31  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlBinaryDictionaryReader.cs : removed lots of unused part.

2009-03-31  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlBinaryDictionaryWriterAutoGen.cs : generated code.